--- a/cv/cv.html
+++ b/cv/cv.html
@@ -81,7 +81,7 @@
         </div>
       </a>
 
-      <a href="https://github.com/Nanaki29/CV_Porte_folio" target="_blank">
+      <a href="https://github.com/Nanaki29/Portfolio" target="_blank">
         <div class="titles">
           <span class="column_logo"><i class="fa-brands fa-github"></i></span>
           <div class="title">Github</div>
