--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="inline">Portfolio</h1>
 		<nav class="inline">
 			<ul>
-				<li><a href="https://github.com/Nanaki29/CV_Porte_folio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
+				<li><a href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
 				<li><a href="https://www.linkedin.com/in/ana%C3%AFs-p-926422236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
 				<li><a href="contact.html">Me contacter</a></li>
 			</ul>
