--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex">
-  <link rel="stylesheet" href="style_pf.css" />
-  <link rel="icon" href="page-web.png">
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="icon" href="img/page-web.png">
   <title>Me contacter</title>
   <script src="https://kit.fontawesome.com/a9c1123218.js" crossorigin="anonymous"></script>
 </head>
@@ -11,30 +11,30 @@
 
 <body>
 
-  <header class="menu">
-    <h1 class="inline">Me contacter</h1>
-    <nav class="inline">
+  <header class="nav">
+    <h1 class="nav__inline">Me contacter</h1>
+    <nav class="nav__inline">
       <ul>
-        <li><a href="index.html">Retour au portfolio</a></li>
+        <li><a class="nav__inline__link" href="index.html">Retour au portfolio</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class='fond'></div>
+  <div class="page-background"></div>
 
-  <section class="page_contact">
+  <section class="contact-page">
 
     <h2>Mes coordonnées</h2>
-    <div class="coordonnees">
+    <div class="contact">
       <p>Si mon profil vous intéresse, n'hésitez pas à me contacter.</p>
       <table>
         <thead>
           <tr>
-            <td><div class="icone_contact"></a><i class="fa-solid fa-envelope fa-xl"></i></div>
+            <td><div class="contact__icon"></a><i class="fa-solid fa-envelope fa-xl"></i></div>
             <td><div>anais.plantecoste@gmail.com</div></td>
           </tr>
           <tr>  
-            <td><div class="icone_contact"><i class="fa-solid fa-mobile-screen fa-xl"></i></div>
+            <td><div class="contact__icon"><i class="fa-solid fa-mobile-screen fa-xl"></i></div>
             <td>06.05.20.29.04</td>
           </tr>
         </thead>
@@ -45,7 +45,7 @@
         <table>
           <thead>
             <tr>
-              <td><div class="icone_contact"><i class="fa-brands fa-linkedin-in fa-xl"></i></td>
+              <td><div class="contact__icon"><i class="fa-brands fa-linkedin-in fa-xl"></i></td>
                 <td>Mon profil Linkedin</div></td>
             </tr>
           </thead>
