--- a/index.html
+++ b/index.html
@@ -2,46 +2,46 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noindex">
-	<link rel="stylesheet" href="style_pf.css" />
-	<link rel="icon" href="page-web.png">
+	<link rel="stylesheet" href="css/main.css" />
+	<link rel="icon" href="img/page-web.png">
 	<title>Mon portfolio</title>
 	<script src="https://kit.fontawesome.com/a9c1123218.js" crossorigin="anonymous"></script>
 </head>
 
 
 <body>
-	<header class="menu">
-		<h1 class="inline">Portfolio</h1>
-		<nav class="inline">
+	<header class="nav">
+		<h1 class="nav__inline">Portfolio</h1>
+		<nav class="nav__inline">
 			<ul>
-				<li><a href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
-				<li><a href="https://www.linkedin.com/in/ana%C3%AFs-p-926422236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-				<li><a href="contact.html">Me contacter</a></li>
+				<li><a class="nav__inline__link" href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
+				<li><a class="nav__inline__link" href="https://www.linkedin.com/in/ana%C3%AFs-p-926422236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+				<li><a class="nav__inline__link" href="contact.html">Me contacter</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<div class='fond'></div>
+	<div class="page-background"></div>
 
-	<section class="page_pf">
+	<section class="main-page">
 
 		<h2>Catalogue de mes créations HTML et CSS</h2>
 
-		<article class="demo">
-			<h3>Mon<span class="italic"> curriculum vitae</span></h3>
-			<div class="demo_img_txt">
-				<a class="demo_img" href="cv/cv.html"><img src="capture_page_cv.png"></a>
-				<div class="demo_txt">
+		<article class="projet">
+			<h3 class="projet__titre">Mon<span class="italic"> curriculum vitae</span></h3>
+			<div class="projet__bloc">
+				<a class="projet__link"  href="cv/cv.html"><img class="projet__img" src="img/capture_page_cv.png"></a>
+				<div class="projet__texte">
 					<p>Présentation de mon parcours professionnelle, de mes formations, de mes compétences et qualités humaines.</p>
 				</div>
 			</div>
 		</article>
 
-		<article class="demo">
-			<h3>Ma première page </h3>
-			<div class="demo_img_txt">
-				<a class="demo_img" href="demo1/demo1.html" target="blank"><img src="capture_site1.png"></a>
-				<div class="demo_txt">
+		<article class="projet">
+			<h3 class="projet__titre">Ma première page </h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="projet1/projet1.html" target="blank"><img class="projet__img" src="img/capture_site1.png"></a>
+				<div class="projet__texte">
 					<p>Création d'une page web responsive. N'hésitez pas à aller y jeter un oeil !</p>
 				</div>
 			</div>
