--- a/projet1/projet1.html
+++ b/projet1/projet1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style_demo1.css" />
+    <link rel="stylesheet" href="style_projet1.css" />
     <link rel="icon" href="voyage.png">
     <title>En voyage avec Sarah</title>
     <script src="https://kit.fontawesome.com/a9c1123218.js" crossorigin="anonymous"></script>
