--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
 <body>
 
   <header class="nav">
-    <h1 class="nav__inline">Me contacter</h1>
+    <h1 class="nav__inline nav__page-link"><a href="contact.html">Me contacter</a></h1>
     <nav class="nav__inline">
       <ul>
-        <li><a class="nav__inline__link" href="index.html">Retour au portfolio</a></li>
+        <li class="nav__inline__link"><a href="index.html">Retour au portfolio</a></li>
       </ul>
     </nav>
   </header>
