--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
 	<header class="nav">
-		<h1 class="nav__inline">Portfolio</h1>
+		<h1 class="nav__inline nav__page-link"><a href="index.html">Portfolio</a></h1>
 		<nav class="nav__inline">
 			<ul>
-				<li><a class="nav__inline__link" href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
-				<li><a class="nav__inline__link" href="https://www.linkedin.com/in/ana%C3%AFs-p-926422236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-				<li><a class="nav__inline__link" href="contact.html">Me contacter</a></li>
+				<li class="nav__inline__link"><a href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
+				<li class="nav__inline__link"><a href="https://www.linkedin.com/in/ana%C3%AFs-p-926422236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+				<li class="nav__inline__link"><a href="contact.html">Me contacter</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -25,7 +25,8 @@
 
 	<section class="main-page">
 
-		<h2>Catalogue de mes créations HTML et CSS</h2>
+		<h2>Catalogue de mes créations</h2>
+		<p>Voici un aperçu de mes pages web en HTML et CSS (sass).</p>
 
 		<article class="projet">
 			<h3 class="projet__titre">Mon<span class="italic"> curriculum vitae</span></h3>
