09/06/22 add functions darken-shift and shadow

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -89,7 +89,7 @@
       </a>  
 
 
-      <a href="cv.pdf" target="_blank">
+      <a href="../assets/cv.pdf" target="_blank">
         <div class="titles">
           <span class="column_logo"><i class="fa-solid fa-file"></i></span>
           <div class="title"><span class="italic">Curriculum vitae</span></div>         
