--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Mon<span class="italic"> curriculum vitae</span></h3>
 			<div class="projet__bloc">
-				<a class="projet__link"  href="cv/cv.html"><img class="projet__img" src="img/capture_page_cv.png"></a>
+				<a class="projet__link"  href="cv/cv.html" target="_blank"><img class="projet__img" src="img/capture_page_cv.png"></a>
 				<div class="projet__texte">
 					<p>Présentation de mon parcours professionnelle, de mes formations, de mes compétences et qualités humaines.</p>
 				</div>
