add formation project

--- a/index.html
+++ b/index.html
@@ -48,6 +48,67 @@
 			</div>
 		</article> 
 
+		<h2>Projets de formation développeur web</h2>
+
+		<article class="projet">
+			<h3 class="projet__titre">Transformer une maquette en site web avec HTML & CSS</h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<div class="projet__texte">
+					<p>Démarrer sur HTML et CSS en intégrant la page Web de Booki, une plateforme de réservation de vacances.</p>
+				</div>
+			</div>
+		</article> 
+
+		<article class="projet">
+			<h3 class="projet__titre">Dynamiser une page web avec des animations CSS</h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<div class="projet__texte">
+					<p>Implémenter la version mobile d'un site de foodtech avec des animations CSS.</p>
+				</div>
+			</div>
+		</article> 
+
+		<article class="projet">
+			<h3 class="projet__titre">Optimiser un site web existant</h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<div class="projet__texte">
+					<p>Faire passer le site web de votre entreprise en tête des résultats Google grâce à la mise en place de bonnes pratiques de SEO.</p>
+				</div>
+			</div>
+		</article>
+		<article class="projet">
+			<h3 class="projet__titre">Construire un site e-commerce en JavaScript</h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<div class="projet__texte">
+					<p>Intégrer de manière dynamique les maquettes du site de Kanap avec JavaScript. Utilisation l’API pour récupérer les produits et leurs détails, et générer l’ajout des produits au panier. </p>
+				</div>
+			</div>
+		</article> 
+
+		<article class="projet">
+			<h3 class="projet__titre">Construire une API sécurisée pour une application d'avis gastronomiques</h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<div class="projet__texte">
+					<p>Créer le backend et l'API d'une application d'avis gastronomiques de sauces piquantes. Utiliser les technologies Node.js, Express et MongoDB pour construire la base de données NoSQL. Sécuriser les données grâce aux normes de l'OWASP.</p>
+				</div>
+			</div>
+		</article> 
+
+		<article class="projet">
+			<h3 class="projet__titre">Créer un réseau social d’entreprise</h3>
+			<div class="projet__bloc">
+				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<div class="projet__texte">
+					<p>Créer le réseau social d'une entreprise avec un framework front-end et manipuler des bases de données (React.js). </p>
+				</div>
+			</div>
+		</article> 
+
 		
 	</section>
 </body>
