--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noindex">
-	<link rel="stylesheet" href="css/css-prefixed.css" />
+	<link rel="stylesheet" href="css/main-prefixed.css" />
 	<link rel="icon" href="img/page-web.png">
 	<title>Mon portfolio</title>
 	<script src="https://kit.fontawesome.com/a9c1123218.js" crossorigin="anonymous"></script>
