fix background problem

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -233,7 +233,7 @@
   <p>Mes différentes expériences professionnelles m'ont permis d’acquérir une bonne capacité de travail en autonomie sur des postes variés. J'ai également un bon sens du relationnel, ayant travaillé en équipe notamment à un poste de responsable.</p>
   <p>J'ai principalement appris en pratiquant directement en milieu professionnel, j'ai donc une bonne capacité d'adaptation et d'appentissage.</p>
   <p>J'ai à coeur de bien faire mon travail en m'impliquant dans les différentes tâches qui me sont confiées grâce a mon adaptabilité et une bonne organisation de travail.</p>
-  <p>J'ai également développé ma créativité grâce à des activités comme la cuisine, le dessin et le couture.</p>
+  <p>J'ai également développé ma créativité grâce à des activités comme la cuisine, le dessin et la couture.</p>
 </section>
 
 
