--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 
 <body>
+	<div class="page-background"></div>
+
 	<header class="nav">
 		<h1 class="nav__inline nav__page-link"><a href="index.html">Portfolio</a></h1>
 		<nav class="nav__inline">
@@ -21,10 +23,7 @@
 		</nav>
 	</header>
 
-	<div class="page-background">
-		<div class="page-background--img"></div>
-		<div class="page-background--color"></div>
-	</div>
+	
 
 	<section class="main-page">
 
