--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noindex">
@@ -16,14 +17,12 @@
 		<h1 class="nav__inline nav__page-link"><a href="index.html">Portfolio</a></h1>
 		<nav class="nav__inline">
 			<ul>
-				<li class="nav__inline__link"><a href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github" target="_blank"></i></a></li>
+				<li class="nav__inline__link"><a href="https://github.com/Nanaki29/Portfolio" target="blank"><i class="fa-brands fa-github"></i></a></li>
 				<li class="nav__inline__link"><a href="https://www.linkedin.com/in/ana%C3%AFs-p-926422236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
 				<li class="nav__inline__link"><a href="contact.html">Me contacter</a></li>
 			</ul>
 		</nav>
 	</header>
-
-	
 
 	<section class="main-page">
 
@@ -33,9 +32,9 @@
 		<article class="projet">
 			<h3 class="projet__titre">Mon<span class="italic"> curriculum vitae</span></h3>
 			<div class="projet__bloc">
-				<a class="projet__link"  href="cv/cv.html" target="_blank"><img class="projet__img" src="img/capture_page_cv.png"></a>
+				<a class="projet__link"  href="cv/cv.html" target="_blank"><img class="projet__img" alt="Curriculum vitae" src="img/capture_page_cv.png"></a>
 				<div class="projet__texte">
-					<p>Présentation de mon parcours professionnelle, de mes formations, de mes compétences et qualités humaines.</p>
+					<p>Présentation de mon parcours professionnel, de mes formations, de mes compétences et qualités humaines.</p>
 				</div>
 			</div>
 		</article>
@@ -43,7 +42,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Ma première page </h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="projet1/projet1.html" target="blank"><img class="projet__img" src="img/capture_site1.png"></a>
+				<a class="projet__link" href="projet1/projet1.html" target="blank"><img class="projet__img" alt="Ma première page web" src="img/capture_site1.png"></a>
 				<div class="projet__texte">
 					<p>Création d'une page web responsive. N'hésitez pas à aller y jeter un oeil !</p>
 				</div>
@@ -55,7 +54,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Transformer une maquette en site web avec HTML & CSS</h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<a class="projet__link" href="" target="blank"><img class="projet__img" alt="Projet à venir" src="img/img-projet.png"></a>
 				<div class="projet__texte">
 					<p>Démarrer sur HTML et CSS en intégrant la page Web de Booki, une plateforme de réservation de vacances.</p>
 				</div>
@@ -65,7 +64,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Dynamiser une page web avec des animations CSS</h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<a class="projet__link" href="" target="blank"><img class="projet__img" alt="Projet à venir" src="img/img-projet.png"></a>
 				<div class="projet__texte">
 					<p>Implémenter la version mobile d'un site de foodtech avec des animations CSS.</p>
 				</div>
@@ -75,7 +74,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Optimiser un site web existant</h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<a class="projet__link" href="" target="blank"><img class="projet__img" alt="Projet à venir" src="img/img-projet.png"></a>
 				<div class="projet__texte">
 					<p>Faire passer le site web de votre entreprise en tête des résultats Google grâce à la mise en place de bonnes pratiques de SEO.</p>
 				</div>
@@ -84,7 +83,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Construire un site e-commerce en JavaScript</h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<a class="projet__link" href="" target="blank"><img class="projet__img" alt="Projet à venir" src="img/img-projet.png"></a>
 				<div class="projet__texte">
 					<p>Intégrer de manière dynamique les maquettes du site de Kanap avec JavaScript. Utilisation l’API pour récupérer les produits et leurs détails, et générer l’ajout des produits au panier. </p>
 				</div>
@@ -94,7 +93,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Construire une API sécurisée pour une application d'avis gastronomiques</h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<a class="projet__link" href="" target="blank"><img class="projet__img" alt="Projet à venir" src="img/img-projet.png"></a>
 				<div class="projet__texte">
 					<p>Créer le backend et l'API d'une application d'avis gastronomiques de sauces piquantes. Utiliser les technologies Node.js, Express et MongoDB pour construire la base de données NoSQL. Sécuriser les données grâce aux normes de l'OWASP.</p>
 				</div>
@@ -104,7 +103,7 @@
 		<article class="projet">
 			<h3 class="projet__titre">Créer un réseau social d’entreprise</h3>
 			<div class="projet__bloc">
-				<a class="projet__link" href="" target="blank"><img class="projet__img" src="img/img-projet.png"></a>
+				<a class="projet__link" href="" target="blank"><img class="projet__img" alt="Projet à venir" src="img/img-projet.png"></a>
 				<div class="projet__texte">
 					<p>Créer le réseau social d'une entreprise avec un framework front-end et manipuler des bases de données (React.js). </p>
 				</div>
