--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex">
@@ -30,7 +31,7 @@
       <table>
         <thead>
           <tr>
-            <td><div class="contact__icon"></a><i class="fa-solid fa-envelope fa-xl"></i></div>
+            <td><div class="contact__icon"><i class="fa-solid fa-envelope fa-xl"></i></div>
             <td><div>anais.plantecoste@gmail.com</div></td>
           </tr>
           <tr>  
@@ -46,7 +47,7 @@
           <thead>
             <tr>
               <td><div class="contact__icon"><i class="fa-brands fa-linkedin-in fa-xl"></i></td>
-                <td>Mon profil Linkedin</div></td>
+              <td>Mon profil Linkedin</div></td>
             </tr>
           </thead>
         </table>
