--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
       <table>
         <thead>
           <tr>
-            <td><div class="contact__icon"><i class="fa-solid fa-envelope fa-xl"></i></div>
+            <td><div class="contact__icon"><i class="fa-solid fa-envelope fa-xl"></i></div></td>
             <td><div>anais.plantecoste@gmail.com</div></td>
           </tr>
           <tr>  
-            <td><div class="contact__icon"><i class="fa-solid fa-mobile-screen fa-xl"></i></div>
+            <td><div class="contact__icon"><i class="fa-solid fa-mobile-screen fa-xl"></i></div></td>
             <td>06.05.20.29.04</td>
           </tr>
         </thead>
@@ -46,7 +46,7 @@
         <table>
           <thead>
             <tr>
-              <td><div class="contact__icon"><i class="fa-brands fa-linkedin-in fa-xl"></i></td>
+              <td><div class="contact__icon"><i class="fa-brands fa-linkedin-in fa-xl"></i></div></td>
               <td>Mon profil Linkedin</div></td>
             </tr>
           </thead>
