Fix text-decoration and color of Icon + Profil Linkedin

--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,18 @@
       </table>
 
       <h2>Réseaux sociaux</h2>
-        <a href="https://www.linkedin.com/in/anaisp/" target="_blank">
-        <table>
-          <thead>
-            <tr>
-              <td><div class="contact__icon"><i class="fa-brands fa-linkedin-in fa-xl"></i></div></td>
-              <td>Mon profil Linkedin</div></td>
-            </tr>
-          </thead>
-        </table>
-        </a>  
+      <div class="reseaux">  
+      <a class="contact-page__link" href="https://www.linkedin.com/in/anaisp/" target="_blank">
+          <table>
+            <thead>
+              <tr>
+                <td><div class="contact__icon"><i class="fa-brands fa-linkedin-in fa-xl"></i></div></td>
+                <td>Mon profil Linkedin</td>
+              </tr>
+            </thead>
+          </table>
+      </a>
+      </div>
     </div>
   </section>
 
